// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fetching user profile is able to fetch user profile with credentials 1`] = `
Object {
  "data": Object {
    "me": Object {
      "email": Any<String>,
      "name": "John Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Fetching user profile is not able to fetch user profile without credentials 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "You are not authorized to perform this action",
    },
  },
}
`;

exports[`Logging in is able to login with correct credentials 1`] = `
Object {
  "data": Object {
    "login": Object {
      "jwt": Any<String>,
      "user": Object {
        "email": "jedi@knight.com",
        "name": "Jedi Knight",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Logging in is not able to login with wrong credentials 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "auth": "Please check your credentials and try again.",
    },
  },
}
`;

exports[`Signing up is able to signup successfully 1`] = `
Object {
  "data": Object {
    "signup": Object {
      "jwt": Any<String>,
      "user": Object {
        "email": "john@doe.com",
        "id": Any<String>,
        "name": "John Doe",
        "team": Object {
          "id": Any<String>,
          "name": "Test team",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Signing up is not able to signup with missing fields 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "email": "Email must be a valid email",
      "name": "Name must be at least 1 characters",
      "password": "Password must be at least 6 characters",
    },
  },
}
`;

exports[`Signing up is not able to signup with missing team name 1`] = `
Object {
  "code": "BAD_USER_INPUT",
  "exception": Object {
    "errors": Object {
      "teamName": "Team name must be at least 1 characters",
    },
  },
}
`;

exports[`Updating user profile can update with valid fields 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "email": "new@doe.com",
      "name": "New Doe",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
